data started, some alignment fixed

--- a/Info/src/components/ux_ui/ux.scss
+++ b/Info/src/components/ux_ui/ux.scss
@@ -235,7 +235,8 @@
             width: 100%;
             display: flex;
             flex-direction: row;
-            align-items: center;
+            align-items: flex-start;
+            justify-content: center;
             gap: 1rem;
             padding: 2rem 4rem;
             & article {
